--- a/style.css
+++ b/style.css
@@ -1,21 +1,39 @@
+
+
+/* --- General --- */
+
+body {
+  font-family: 'Lora', 'Times New Roman', serif;
+  font-size: 24px;
+  color: #404040;
+  position: relative;
+ 
+}
+
 html {
-	max-width: 1050px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 30px;
-	color: #333;
-	padding-bottom: 200px;
-	 }
+	        max-width: 1050px;
+		        margin-left: auto;
+			        margin-right: auto;
+				        margin-top: 30px;
+					        color: #333;
+						        padding-bottom: 200px;
+							         }
 
-a {color: royalblue; }
-a:hover {color: lightblue; }
 
-.entry {
-	border-left: 10px solid darkslategray;
-	padding: 0px 10px 0px 10px;
-	border-radius: 0 30px 30px 0;
-	margin-bottom: 20px;
-	background-color: #eee;
-	}
 
-.entry h2 { margin: 5px auto 2px auto; }
+
+ li span { position: relative; left: -100px; }
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Lora', 'Times New Roman', serif;
+  font-weight: 500;
+}
+a {
+  color: {{ site.link-col }};
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  color: {{ site.hover-col }};
+}
+
